# mjsonx

./: .gitignore  CMakeLists.txt  README.md
module/: ast.ixx  lexer.ixx  mjsonx.ixx  parser.ixx  reflection.ixx  serializer.ixx  types.ixx  utils.ixx
test/: demo1.cpp
